k8s/infra-base/monitoring/jaeger/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: cwx
spec:
  selector:
    app: jaeger
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  - name: zipkin
    port: 9411
    targetPort: 9411
  - name: query
    port: 16686
    targetPort: 16686
  - name: agent
    port: 5778
    targetPort: 5778
